[project]
name = "comfyui_tiledksampler"
description = "This extension contains a tiled sampler for ComfyUI. It allows for denoising larger images by splitting it up into smaller tiles and denoising these. It tries to minimize any seams for showing up in the end result by gradually denoising all tiles one step at the time and randomizing tile positions for every step."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/BlenderNeko/ComfyUI_TiledKSampler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_TiledKSampler"
Icon = ""
